syntax = "proto3";

service Take_Shelter
{
    rpc call_take_shelter(soldier_pos_details) returns (secure_position){

    }
}

message soldier_pos_details
{
    int64 x = 1;
    int64 y = 2;
    int64 id = 3;
}

message secure_position
{
    int64 secure_x = 1;
    int64 secure_y = 2;
}